--- a/fixtures/vcr/get_git_abuse_script/Get_script_for_a_single_character.yml
+++ b/fixtures/vcr/get_git_abuse_script/Get_script_for_a_single_character.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://uncleclive.herokuapp.com/a/gitfiti
+    uri: http://uncleclive.herokuapp.com/a/pokrovsky
     body:
       encoding: US-ASCII
       string: ''
@@ -30,7 +30,7 @@ http_interactions:
       - keep-alive
     body:
       encoding: ASCII-8BIT
-      string: '{"id":"a","data":[[0,0,0,0,0,0,0,0],[0,0,0,0,0,0,0,0],[0,0,1,1,1,0,0,0],[0,0,0,0,0,1,0,0],[0,0,1,1,1,1,0,0],[0,1,0,0,0,1,0,0],[0,0,1,1,1,1,0,0]]}'
+      string: '{"id":"a","data":[[0,0,0,0,0,0,0,0],[0,0,0,0,0,0,0,0],[0,0,4,4,4,0,0,0],[0,0,0,0,0,4,0,0],[0,0,4,4,4,4,0,0],[0,4,0,0,0,4,0,0],[0,0,4,4,4,4,0,0]]}'
     http_version: 
   recorded_at: Wed, 31 Dec 1969 23:00:00 GMT
 - request:
@@ -50,7 +50,7 @@ http_interactions:
       Server:
       - GitHub.com
       Date:
-      - Wed, 04 Dec 2013 22:24:42 GMT
+      - Wed, 04 Dec 2013 22:37:48 GMT
       Content-Type:
       - application/json; charset=utf-8
       Status:
@@ -62,16 +62,16 @@ http_interactions:
       X-Frame-Options:
       - deny
       Set-Cookie:
-      - logged_in=no; domain=.github.com; path=/; expires=Sun, 04-Dec-2033 22:24:42
+      - logged_in=no; domain=.github.com; path=/; expires=Sun, 04-Dec-2033 22:37:48
         GMT; secure; HttpOnly
       X-Runtime:
-      - '7'
+      - '9'
       Etag:
       - '"175dba378a870f3ea1e7b90f13ef37d0"'
       Content-Length:
       - '6223'
       X-Github-Request-Id:
-      - 574A4CAB:31F3:23E3C12:529FABA9
+      - 574A4CAB:3B1D:239CCEB:529FAEBB
       Vary:
       - Accept-Encoding
     body:
