--- a/fixtures/vcr/get_git_abuse_script/handle_a_space.yml
+++ b/fixtures/vcr/get_git_abuse_script/handle_a_space.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://uncleclive.herokuapp.com/ROB%20TS/gitfiti
+    uri: http://uncleclive.herokuapp.com/ROB%20TS/pokrovsky
     body:
       encoding: US-ASCII
       string: ''
@@ -30,7 +30,7 @@ http_interactions:
       - keep-alive
     body:
       encoding: ASCII-8BIT
-      string: '{"id":"ROB TS","data":[[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],[0,1,1,1,1,1,0,0,0,0,1,1,1,1,0,0,0,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,1,1,1,1,1,1,1,0,0,0,1,1,1,1,0,0],[0,1,0,0,0,0,1,0,0,1,0,0,0,0,1,0,0,1,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,1,0,0,0,0,0,0],[0,1,0,0,0,0,1,0,0,1,0,0,0,0,1,0,0,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,1,1,1,1,0,0],[0,1,1,1,1,1,0,0,0,1,0,0,0,0,1,0,0,1,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,1,0],[0,1,0,0,0,1,0,0,0,1,0,0,0,0,1,0,0,1,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,1,0,0,0,0,1,0],[0,1,0,0,0,0,1,0,0,0,1,1,1,1,0,0,0,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,1,1,1,1,0,0]]}'
+      string: '{"id":"ROB TS","data":[[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],[0,4,4,4,4,4,0,0,0,0,4,4,4,4,0,0,0,4,4,4,4,4,0,0,0,0,0,0,0,0,0,0,4,4,4,4,4,4,4,0,0,0,4,4,4,4,0,0],[0,4,0,0,0,0,4,0,0,4,0,0,0,0,4,0,0,4,0,0,0,0,4,0,0,0,0,0,0,0,0,0,0,0,0,4,0,0,0,0,0,4,0,0,0,0,0,0],[0,4,0,0,0,0,4,0,0,4,0,0,0,0,4,0,0,4,4,4,4,4,0,0,0,0,0,0,0,0,0,0,0,0,0,4,0,0,0,0,0,0,4,4,4,4,0,0],[0,4,4,4,4,4,0,0,0,4,0,0,0,0,4,0,0,4,0,0,0,0,4,0,0,0,0,0,0,0,0,0,0,0,0,4,0,0,0,0,0,0,0,0,0,0,4,0],[0,4,0,0,0,4,0,0,0,4,0,0,0,0,4,0,0,4,0,0,0,0,4,0,0,0,0,0,0,0,0,0,0,0,0,4,0,0,0,0,0,4,0,0,0,0,4,0],[0,4,0,0,0,0,4,0,0,0,4,4,4,4,0,0,0,4,4,4,4,4,0,0,0,0,0,0,0,0,0,0,0,0,0,4,0,0,0,0,0,0,4,4,4,4,0,0]]}'
     http_version: 
   recorded_at: Mon, 02 Dec 2013 00:00:00 GMT
 - request:
@@ -50,7 +50,7 @@ http_interactions:
       Server:
       - GitHub.com
       Date:
-      - Wed, 04 Dec 2013 22:24:42 GMT
+      - Wed, 04 Dec 2013 22:37:48 GMT
       Content-Type:
       - application/json; charset=utf-8
       Status:
@@ -62,7 +62,7 @@ http_interactions:
       X-Frame-Options:
       - deny
       Set-Cookie:
-      - logged_in=no; domain=.github.com; path=/; expires=Sun, 04-Dec-2033 22:24:42
+      - logged_in=no; domain=.github.com; path=/; expires=Sun, 04-Dec-2033 22:37:48
         GMT; secure; HttpOnly
       X-Runtime:
       - '9'
@@ -71,7 +71,7 @@ http_interactions:
       Content-Length:
       - '6223'
       X-Github-Request-Id:
-      - 574A4CAB:31F4:2465856:529FABAA
+      - 574A4CAB:3B1F:21D05FC:529FAEBC
       Vary:
       - Accept-Encoding
     body:
