--- a/fixtures/vcr/get_git_abuse_script/handle_a_space.yml
+++ b/fixtures/vcr/get_git_abuse_script/handle_a_space.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://uncleclive.herokuapp.com/1974/pokrovsky
+    uri: http://uncleclive.herokuapp.com/ROB%20TS/pokrovsky
     body:
       encoding: US-ASCII
       string: ''
@@ -25,12 +25,12 @@ http_interactions:
       X-Xss-Protection:
       - 1; mode=block
       Content-Length:
-      - '484'
+      - '710'
       Connection:
       - keep-alive
     body:
       encoding: ASCII-8BIT
-      string: '{"id":"1974","data":[[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],[0,0,0,4,4,0,0,0,0,0,4,4,4,4,0,0,0,4,4,4,4,4,4,0,0,0,0,0,4,0,0,0],[0,0,4,0,4,0,0,0,0,4,0,0,0,0,4,0,0,0,0,0,0,0,4,0,0,0,0,4,4,0,0,0],[0,0,0,0,4,0,0,0,0,4,0,0,0,0,4,0,0,0,0,0,0,4,0,0,0,0,4,0,4,0,0,0],[0,0,0,0,4,0,0,0,0,0,4,4,4,4,4,0,0,0,0,0,4,0,0,0,0,4,0,0,4,0,0,0],[0,0,0,0,4,0,0,0,0,0,0,0,0,0,4,0,0,0,0,4,0,0,0,0,0,4,4,4,4,4,4,0],[0,0,4,4,4,4,4,0,0,0,4,4,4,4,0,0,0,0,0,4,0,0,0,0,0,0,0,0,4,0,0,0]]}'
+      string: '{"id":"ROB TS","data":[[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],[0,4,4,4,4,4,0,0,0,0,4,4,4,4,0,0,0,4,4,4,4,4,0,0,0,0,0,0,0,0,0,0,4,4,4,4,4,4,4,0,0,0,4,4,4,4,0,0],[0,4,0,0,0,0,4,0,0,4,0,0,0,0,4,0,0,4,0,0,0,0,4,0,0,0,0,0,0,0,0,0,0,0,0,4,0,0,0,0,0,4,0,0,0,0,0,0],[0,4,0,0,0,0,4,0,0,4,0,0,0,0,4,0,0,4,4,4,4,4,0,0,0,0,0,0,0,0,0,0,0,0,0,4,0,0,0,0,0,0,4,4,4,4,0,0],[0,4,4,4,4,4,0,0,0,4,0,0,0,0,4,0,0,4,0,0,0,0,4,0,0,0,0,0,0,0,0,0,0,0,0,4,0,0,0,0,0,0,0,0,0,0,4,0],[0,4,0,0,0,4,0,0,0,4,0,0,0,0,4,0,0,4,0,0,0,0,4,0,0,0,0,0,0,0,0,0,0,0,0,4,0,0,0,0,0,4,0,0,0,0,4,0],[0,4,0,0,0,0,4,0,0,0,4,4,4,4,0,0,0,4,4,4,4,4,0,0,0,0,0,0,0,0,0,0,0,0,0,4,0,0,0,0,0,0,4,4,4,4,0,0]]}'
     http_version: 
   recorded_at: Sat, 07 Dec 2013 00:00:00 GMT
 - request:
@@ -50,7 +50,7 @@ http_interactions:
       Server:
       - GitHub.com
       Date:
-      - Sat, 07 Dec 2013 23:55:05 GMT
+      - Sun, 08 Dec 2013 00:04:53 GMT
       Content-Type:
       - application/json; charset=utf-8
       Status:
@@ -62,16 +62,16 @@ http_interactions:
       X-Frame-Options:
       - deny
       Set-Cookie:
-      - logged_in=no; domain=.github.com; path=/; expires=Wed, 07-Dec-2033 23:55:05
+      - logged_in=no; domain=.github.com; path=/; expires=Thu, 08-Dec-2033 00:04:53
         GMT; secure; HttpOnly
       X-Runtime:
-      - '15'
+      - '17'
       Etag:
       - '"a099b6e168de29f3e81e61fdde279e3d"'
       Content-Length:
       - '6281'
       X-Github-Request-Id:
-      - 574A4CAB:2A9E:2346053:52A3B559
+      - 574A4CAB:1B7D:BBDAE5:52A3B7A5
       Vary:
       - Accept-Encoding
     body:
