--- a/fixtures/vcr/get_git_abuse_script/it_should_not_blow_up_on_strings_longer_than_6_characters.yml
+++ b/fixtures/vcr/get_git_abuse_script/it_should_not_blow_up_on_strings_longer_than_6_characters.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://uncleclive.herokuapp.com/1974/pokrovsky
+    uri: http://uncleclive.herokuapp.com/long_s/pokrovsky
     body:
       encoding: US-ASCII
       string: ''
@@ -25,12 +25,12 @@ http_interactions:
       X-Xss-Protection:
       - 1; mode=block
       Content-Length:
-      - '484'
+      - '710'
       Connection:
       - keep-alive
     body:
       encoding: ASCII-8BIT
-      string: '{"id":"1974","data":[[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],[0,0,0,4,4,0,0,0,0,0,4,4,4,4,0,0,0,4,4,4,4,4,4,0,0,0,0,0,4,0,0,0],[0,0,4,0,4,0,0,0,0,4,0,0,0,0,4,0,0,0,0,0,0,0,4,0,0,0,0,4,4,0,0,0],[0,0,0,0,4,0,0,0,0,4,0,0,0,0,4,0,0,0,0,0,0,4,0,0,0,0,4,0,4,0,0,0],[0,0,0,0,4,0,0,0,0,0,4,4,4,4,4,0,0,0,0,0,4,0,0,0,0,4,0,0,4,0,0,0],[0,0,0,0,4,0,0,0,0,0,0,0,0,0,4,0,0,0,0,4,0,0,0,0,0,4,4,4,4,4,4,0],[0,0,4,4,4,4,4,0,0,0,4,4,4,4,0,0,0,0,0,4,0,0,0,0,0,0,0,0,4,0,0,0]]}'
+      string: '{"id":"long_s","data":[[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],[0,0,0,4,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,4,4,4,4,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],[0,0,0,4,0,0,0,0,0,0,4,4,4,0,0,0,0,4,4,4,4,0,0,0,0,4,0,0,0,4,0,0,0,0,0,0,0,0,0,0,0,0,4,4,4,0,0,0],[0,0,0,4,0,0,0,0,0,4,0,0,0,4,0,0,0,4,0,0,0,4,0,0,0,4,0,0,0,4,0,0,0,0,0,0,0,0,0,0,0,4,0,0,0,0,0,0],[0,0,0,4,0,0,0,0,0,4,0,0,0,4,0,0,0,4,0,0,0,4,0,0,0,0,4,4,4,4,0,0,0,0,0,0,0,0,0,0,0,0,4,4,4,0,0,0],[0,0,0,4,0,0,0,0,0,4,0,0,0,4,0,0,0,4,0,0,0,4,0,0,0,0,0,0,0,4,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,4,0,0],[0,0,0,0,4,4,0,0,0,0,4,4,4,0,0,0,0,4,0,0,0,4,0,0,0,0,4,4,4,0,0,0,4,4,4,4,4,4,4,4,0,4,4,4,4,0,0,0]]}'
     http_version: 
   recorded_at: Sat, 07 Dec 2013 00:00:00 GMT
 - request:
@@ -50,7 +50,7 @@ http_interactions:
       Server:
       - GitHub.com
       Date:
-      - Thu, 19 Dec 2013 15:40:57 GMT
+      - Thu, 19 Dec 2013 15:41:04 GMT
       Content-Type:
       - application/json; charset=utf-8
       Status:
@@ -62,16 +62,16 @@ http_interactions:
       X-Frame-Options:
       - deny
       Set-Cookie:
-      - logged_in=no; domain=.github.com; path=/; expires=Mon, 19-Dec-2033 15:40:57
+      - logged_in=no; domain=.github.com; path=/; expires=Mon, 19-Dec-2033 15:41:04
         GMT; secure; HttpOnly
       X-Runtime:
-      - '16'
+      - '15'
       Etag:
       - '"e27c26dc558d7fe10b2f0c7674f1cbaa"'
       Content-Length:
       - '6403'
       X-Github-Request-Id:
-      - 3EFEF783:6DA8:4B97904:52B31389
+      - 3EFEF783:6DAC:C456A4F:52B3138F
       Vary:
       - Accept-Encoding
     body:
