--- a/fixtures/vcr/get_git_abuse_script/it_should_not_blow_up_on_strings_longer_than_6_characters.yml
+++ b/fixtures/vcr/get_git_abuse_script/it_should_not_blow_up_on_strings_longer_than_6_characters.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://uncleclive.herokuapp.com/long_s/pokrovsky
+    uri: http://dead-cockroach.herokuapp.com/long_s
     body:
       encoding: US-ASCII
       string: ''
@@ -11,72 +11,40 @@ http_interactions:
       - application/json
   response:
     status:
-      code: 200
-      message: OK
+      code: 503
+      message: Service Unavailable
     headers:
-      Content-Type:
-      - text/html;charset=utf-8
-      Server:
-      - thin 1.6.1 codename Death Proof
-      X-Content-Type-Options:
-      - nosniff
-      X-Frame-Options:
-      - SAMEORIGIN
-      X-Xss-Protection:
-      - 1; mode=block
-      Content-Length:
-      - '710'
       Connection:
       - keep-alive
-    body:
-      encoding: ASCII-8BIT
-      string: '{"id":"long_s","data":[[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],[0,0,0,4,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,4,4,4,4,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],[0,0,0,4,0,0,0,0,0,0,4,4,4,0,0,0,0,4,4,4,4,0,0,0,0,4,0,0,0,4,0,0,0,0,0,0,0,0,0,0,0,0,4,4,4,0,0,0],[0,0,0,4,0,0,0,0,0,4,0,0,0,4,0,0,0,4,0,0,0,4,0,0,0,4,0,0,0,4,0,0,0,0,0,0,0,0,0,0,0,4,0,0,0,0,0,0],[0,0,0,4,0,0,0,0,0,4,0,0,0,4,0,0,0,4,0,0,0,4,0,0,0,0,4,4,4,4,0,0,0,0,0,0,0,0,0,0,0,0,4,4,4,0,0,0],[0,0,0,4,0,0,0,0,0,4,0,0,0,4,0,0,0,4,0,0,0,4,0,0,0,0,0,0,0,4,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,4,0,0],[0,0,0,0,4,4,0,0,0,0,4,4,4,0,0,0,0,4,0,0,0,4,0,0,0,0,4,4,4,0,0,0,4,4,4,4,4,4,4,4,0,4,4,4,4,0,0,0]]}'
-    http_version: 
-  recorded_at: Sat, 07 Dec 2013 00:00:00 GMT
-- request:
-    method: get
-    uri: https://github.com/users/pikesley/contributions_calendar_data
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
-      - application/json
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
       Server:
-      - GitHub.com
+      - Cowboy
       Date:
-      - Thu, 19 Dec 2013 15:41:04 GMT
-      Content-Type:
-      - application/json; charset=utf-8
-      Status:
-      - 200 OK
-      Cache-Control:
-      - private, max-age=0, must-revalidate
-      Strict-Transport-Security:
-      - max-age=2592000
-      X-Frame-Options:
-      - deny
-      Set-Cookie:
-      - logged_in=no; domain=.github.com; path=/; expires=Mon, 19-Dec-2033 15:41:04
-        GMT; secure; HttpOnly
-      X-Runtime:
-      - '15'
-      Etag:
-      - '"e27c26dc558d7fe10b2f0c7674f1cbaa"'
+      - Fri, 01 Aug 2014 14:38:58 GMT
       Content-Length:
-      - '6403'
-      X-Github-Request-Id:
-      - 3EFEF783:6DAC:C456A4F:52B3138F
-      Vary:
-      - Accept-Encoding
+      - '484'
+      Content-Type:
+      - text/html; charset=utf-8
+      Cache-Control:
+      - no-cache, no-store
     body:
       encoding: ASCII-8BIT
-      string: '[["2012/12/19",0],["2012/12/20",0],["2012/12/21",0],["2012/12/22",0],["2012/12/23",0],["2012/12/24",0],["2012/12/25",0],["2012/12/26",0],["2012/12/27",0],["2012/12/28",0],["2012/12/29",0],["2012/12/30",0],["2012/12/31",0],["2013/01/01",0],["2013/01/02",0],["2013/01/03",0],["2013/01/04",0],["2013/01/05",0],["2013/01/06",0],["2013/01/07",1],["2013/01/08",3],["2013/01/09",0],["2013/01/10",0],["2013/01/11",0],["2013/01/12",0],["2013/01/13",0],["2013/01/14",0],["2013/01/15",0],["2013/01/16",0],["2013/01/17",0],["2013/01/18",0],["2013/01/19",0],["2013/01/20",0],["2013/01/21",0],["2013/01/22",0],["2013/01/23",0],["2013/01/24",108],["2013/01/25",1],["2013/01/26",0],["2013/01/27",0],["2013/01/28",0],["2013/01/29",2],["2013/01/30",108],["2013/01/31",2],["2013/02/01",108],["2013/02/02",0],["2013/02/03",0],["2013/02/04",0],["2013/02/05",108],["2013/02/06",5],["2013/02/07",18],["2013/02/08",7],["2013/02/09",108],["2013/02/10",5],["2013/02/11",0],["2013/02/12",0],["2013/02/13",16],["2013/02/14",4],["2013/02/15",9],["2013/02/16",1],["2013/02/17",0],["2013/02/18",1],["2013/02/19",3],["2013/02/20",12],["2013/02/21",26],["2013/02/22",8],["2013/02/23",1],["2013/02/24",3],["2013/02/25",15],["2013/02/26",0],["2013/02/27",20],["2013/02/28",7],["2013/03/01",15],["2013/03/02",0],["2013/03/03",8],["2013/03/04",7],["2013/03/05",22],["2013/03/06",3],["2013/03/07",40],["2013/03/08",14],["2013/03/09",4],["2013/03/10",0],["2013/03/11",0],["2013/03/12",3],["2013/03/13",108],["2013/03/14",108],["2013/03/15",108],["2013/03/16",0],["2013/03/17",2],["2013/03/18",7],["2013/03/19",108],["2013/03/20",8],["2013/03/21",33],["2013/03/22",2],["2013/03/23",108],["2013/03/24",10],["2013/03/25",10],["2013/03/26",108],["2013/03/27",5],["2013/03/28",22],["2013/03/29",0],["2013/03/30",108],["2013/03/31",0],["2013/04/01",0],["2013/04/02",108],["2013/04/03",12],["2013/04/04",5],["2013/04/05",6],["2013/04/06",108],["2013/04/07",0],["2013/04/08",11],["2013/04/09",1],["2013/04/10",1],["2013/04/11",3],["2013/04/12",12],["2013/04/13",0],["2013/04/14",0],["2013/04/15",0],["2013/04/16",0],["2013/04/17",0],["2013/04/18",0],["2013/04/19",0],["2013/04/20",0],["2013/04/21",0],["2013/04/22",1],["2013/04/23",7],["2013/04/24",13],["2013/04/25",4],["2013/04/26",13],["2013/04/27",0],["2013/04/28",0],["2013/04/29",4],["2013/04/30",12],["2013/05/01",108],["2013/05/02",108],["2013/05/03",108],["2013/05/04",0],["2013/05/05",0],["2013/05/06",0],["2013/05/07",108],["2013/05/08",3],["2013/05/09",0],["2013/05/10",5],["2013/05/11",108],["2013/05/12",2],["2013/05/13",4],["2013/05/14",108],["2013/05/15",14],["2013/05/16",0],["2013/05/17",10],["2013/05/18",108],["2013/05/19",0],["2013/05/20",3],["2013/05/21",108],["2013/05/22",6],["2013/05/23",2],["2013/05/24",2],["2013/05/25",108],["2013/05/26",0],["2013/05/27",0],["2013/05/28",3],["2013/05/29",108],["2013/05/30",108],["2013/05/31",108],["2013/06/01",0],["2013/06/02",0],["2013/06/03",0],["2013/06/04",2],["2013/06/05",5],["2013/06/06",0],["2013/06/07",1],["2013/06/08",0],["2013/06/09",0],["2013/06/10",9],["2013/06/11",22],["2013/06/12",8],["2013/06/13",0],["2013/06/14",22],["2013/06/15",0],["2013/06/16",0],["2013/06/17",0],["2013/06/18",1],["2013/06/19",14],["2013/06/20",0],["2013/06/21",16],["2013/06/22",0],["2013/06/23",0],["2013/06/24",0],["2013/06/25",1],["2013/06/26",0],["2013/06/27",108],["2013/06/28",108],["2013/06/29",0],["2013/06/30",0],["2013/07/01",0],["2013/07/02",0],["2013/07/03",108],["2013/07/04",2],["2013/07/05",0],["2013/07/06",108],["2013/07/07",0],["2013/07/08",4],["2013/07/09",0],["2013/07/10",108],["2013/07/11",7],["2013/07/12",2],["2013/07/13",108],["2013/07/14",0],["2013/07/15",6],["2013/07/16",1],["2013/07/17",108],["2013/07/18",0],["2013/07/19",0],["2013/07/20",108],["2013/07/21",0],["2013/07/22",108],["2013/07/23",108],["2013/07/24",108],["2013/07/25",108],["2013/07/26",108],["2013/07/27",108],["2013/07/28",0],["2013/07/29",0],["2013/07/30",1],["2013/07/31",1],["2013/08/01",2],["2013/08/02",3],["2013/08/03",0],["2013/08/04",0],["2013/08/05",4],["2013/08/06",0],["2013/08/07",0],["2013/08/08",4],["2013/08/09",3],["2013/08/10",0],["2013/08/11",0],["2013/08/12",1],["2013/08/13",8],["2013/08/14",1],["2013/08/15",3],["2013/08/16",1],["2013/08/17",0],["2013/08/18",3],["2013/08/19",0],["2013/08/20",0],["2013/08/21",108],["2013/08/22",108],["2013/08/23",108],["2013/08/24",0],["2013/08/25",0],["2013/08/26",0],["2013/08/27",108],["2013/08/28",0],["2013/08/29",108],["2013/08/30",0],["2013/08/31",108],["2013/09/01",0],["2013/09/02",1],["2013/09/03",108],["2013/09/04",8],["2013/09/05",108],["2013/09/06",4],["2013/09/07",108],["2013/09/08",9],["2013/09/09",8],["2013/09/10",108],["2013/09/11",19],["2013/09/12",108],["2013/09/13",0],["2013/09/14",108],["2013/09/15",0],["2013/09/16",0],["2013/09/17",0],["2013/09/18",108],["2013/09/19",0],["2013/09/20",0],["2013/09/21",108],["2013/09/22",0],["2013/09/23",0],["2013/09/24",0],["2013/09/25",0],["2013/09/26",0],["2013/09/27",0],["2013/09/28",0],["2013/09/29",0],["2013/09/30",0],["2013/10/01",4],["2013/10/02",5],["2013/10/03",3],["2013/10/04",5],["2013/10/05",0],["2013/10/06",0],["2013/10/07",11],["2013/10/08",7],["2013/10/09",5],["2013/10/10",9],["2013/10/11",9],["2013/10/12",0],["2013/10/13",0],["2013/10/14",1],["2013/10/15",3],["2013/10/16",5],["2013/10/17",0],["2013/10/18",3],["2013/10/19",0],["2013/10/20",0],["2013/10/21",10],["2013/10/22",6],["2013/10/23",6],["2013/10/24",10],["2013/10/25",3],["2013/10/26",11],["2013/10/27",1],["2013/10/28",2],["2013/10/29",108],["2013/10/30",1],["2013/10/31",4],["2013/11/01",6],["2013/11/02",108],["2013/11/03",0],["2013/11/04",3],["2013/11/05",10],["2013/11/06",108],["2013/11/07",1],["2013/11/08",108],["2013/11/09",0],["2013/11/10",69],["2013/11/11",4],["2013/11/12",9],["2013/11/13",67],["2013/11/14",108],["2013/11/15",41],["2013/11/16",15],["2013/11/17",8],["2013/11/18",29],["2013/11/19",3],["2013/11/20",38],["2013/11/21",20],["2013/11/22",23],["2013/11/23",2],["2013/11/24",0],["2013/11/25",20],["2013/11/26",13],["2013/11/27",12],["2013/11/28",14],["2013/11/29",3],["2013/11/30",79],["2013/12/01",12],["2013/12/02",32],["2013/12/03",17],["2013/12/04",30],["2013/12/05",12],["2013/12/06",13],["2013/12/07",11],["2013/12/08",10],["2013/12/09",14],["2013/12/10",13],["2013/12/11",11],["2013/12/12",22],["2013/12/13",17],["2013/12/14",19],["2013/12/15",4],["2013/12/16",18],["2013/12/17",40],["2013/12/18",18],["2013/12/19",7]]'
+      string: |-
+        <!DOCTYPE html>
+            <html>
+            <head>
+              <meta name="viewport" content="width=device-width, initial-scale=1">
+              <style type="text/css">
+                html, body, iframe { margin: 0; padding: 0; height: 100%; }
+                iframe { display: block; width: 100%; border: none; }
+              </style>
+            <title>Application Error</title>
+            </head>
+            <body>
+              <iframe src="//s3.amazonaws.com/heroku_pages/error.html">
+                <p>Application Error</p>
+              </iframe>
+            </body>
+            </html>
     http_version: 
   recorded_at: Sat, 07 Dec 2013 00:00:00 GMT
-recorded_with: VCR 2.8.0
+recorded_with: VCR 2.9.2
