--- a/spec/vcr/Pokrovsky_Historiograph/should_have_days.yml
+++ b/spec/vcr/Pokrovsky_Historiograph/should_have_days.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://uncleclive.herokuapp.com/1974/pokrovsky
+    uri: http://dead-cockroach.herokuapp.com/1974
     body:
       encoding: US-ASCII
       string: ''
@@ -14,28 +14,32 @@ http_interactions:
       code: 200
       message: OK
     headers:
+      Date:
+      - Sat, 30 Aug 2014 14:20:38 GMT
+      Connection:
+      - keep-alive
       Content-Type:
       - text/html;charset=utf-8
-      Server:
-      - thin 1.6.1 codename Death Proof
+      Content-Length:
+      - '484'
+      X-Xss-Protection:
+      - 1; mode=block
       X-Content-Type-Options:
       - nosniff
       X-Frame-Options:
       - SAMEORIGIN
-      X-Xss-Protection:
-      - 1; mode=block
-      Content-Length:
-      - '484'
-      Connection:
-      - keep-alive
+      Server:
+      - thin 1.6.2 codename Doc Brown
+      Via:
+      - 1.1 vegur
     body:
       encoding: ASCII-8BIT
-      string: '{"id":"1974","data":[[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],[0,0,0,4,4,0,0,0,0,0,4,4,4,4,0,0,0,4,4,4,4,4,4,0,0,0,0,0,4,0,0,0],[0,0,4,0,4,0,0,0,0,4,0,0,0,0,4,0,0,0,0,0,0,0,4,0,0,0,0,4,4,0,0,0],[0,0,0,0,4,0,0,0,0,4,0,0,0,0,4,0,0,0,0,0,0,4,0,0,0,0,4,0,4,0,0,0],[0,0,0,0,4,0,0,0,0,0,4,4,4,4,4,0,0,0,0,0,4,0,0,0,0,4,0,0,4,0,0,0],[0,0,0,0,4,0,0,0,0,0,0,0,0,0,4,0,0,0,0,4,0,0,0,0,0,4,4,4,4,4,4,0],[0,0,4,4,4,4,4,0,0,0,4,4,4,4,0,0,0,0,0,4,0,0,0,0,0,0,0,0,4,0,0,0]]}'
+      string: '{"id":"1974","data":[[0,0,0,4,4,0,0,0,0,0,4,4,4,4,0,0,0,4,4,4,4,4,4,0,0,0,0,0,4,0,0,0],[0,0,4,0,4,0,0,0,0,4,0,0,0,0,4,0,0,0,0,0,0,0,4,0,0,0,0,4,4,0,0,0],[0,0,0,0,4,0,0,0,0,4,0,0,0,0,4,0,0,0,0,0,0,4,0,0,0,0,4,0,4,0,0,0],[0,0,0,0,4,0,0,0,0,0,4,4,4,4,4,0,0,0,0,0,4,0,0,0,0,4,0,0,4,0,0,0],[0,0,0,0,4,0,0,0,0,0,0,0,0,0,4,0,0,0,0,4,0,0,0,0,0,4,4,4,4,4,4,0],[0,0,4,4,4,4,4,0,0,0,4,4,4,4,0,0,0,0,0,4,0,0,0,0,0,0,0,0,4,0,0,0],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0]]}'
     http_version: 
   recorded_at: Sat, 07 Dec 2013 00:00:00 GMT
 - request:
     method: get
-    uri: https://github.com/users/pikesley/contributions_calendar_data
+    uri: https://github.com/users/pikesley/contributions
     body:
       encoding: US-ASCII
       string: ''
@@ -50,33 +54,51 @@ http_interactions:
       Server:
       - GitHub.com
       Date:
-      - Thu, 19 Dec 2013 15:40:57 GMT
+      - Sat, 30 Aug 2014 14:20:40 GMT
       Content-Type:
       - application/json; charset=utf-8
+      Transfer-Encoding:
+      - chunked
       Status:
       - 200 OK
-      Cache-Control:
-      - private, max-age=0, must-revalidate
-      Strict-Transport-Security:
-      - max-age=2592000
+      X-Xss-Protection:
+      - 1; mode=block
       X-Frame-Options:
       - deny
-      Set-Cookie:
-      - logged_in=no; domain=.github.com; path=/; expires=Mon, 19-Dec-2033 15:40:57
-        GMT; secure; HttpOnly
-      X-Runtime:
-      - '16'
-      Etag:
-      - '"e27c26dc558d7fe10b2f0c7674f1cbaa"'
-      Content-Length:
-      - '6403'
-      X-Github-Request-Id:
-      - 3EFEF783:6DA8:4B97904:52B31389
+      Content-Security-Policy:
+      - 'default-src *; script-src assets-cdn.github.com www.google-analytics.com
+        collector-cdn.github.com; object-src assets-cdn.github.com; style-src ''self''
+        ''unsafe-inline'' ''unsafe-eval'' assets-cdn.github.com; img-src ''self''
+        data: assets-cdn.github.com identicons.github.com www.google-analytics.com
+        collector.githubapp.com *.githubusercontent.com *.gravatar.com *.wp.com; media-src
+        ''none''; frame-src ''self'' render.githubusercontent.com www.youtube.com
+        player.vimeo.com checkout.paypal.com; font-src assets-cdn.github.com; connect-src
+        ''self'' ghconduit.com:25035 live.github.com uploads.github.com s3.amazonaws.com'
       Vary:
       - Accept-Encoding
+      - X-PJAX
+      Etag:
+      - '"0c781cb62097dd871d94ef1bbe778fe6"'
+      Cache-Control:
+      - max-age=0, private, must-revalidate
+      X-Ua-Compatible:
+      - IE=Edge,chrome=1
+      Set-Cookie:
+      - logged_in=no; domain=.github.com; path=/; expires=Wed, 30-Aug-2034 14:20:40
+        GMT; secure; HttpOnly
+      X-Runtime:
+      - '0.022808'
+      X-Github-Request-Id:
+      - 5E2DE8B3:0874:2D9D7F16:5401DDB8
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubdomains; preload
+      X-Content-Type-Options:
+      - nosniff
+      X-Served-By:
+      - f0ee042be143fcba78041fc2f69c0aa7
     body:
       encoding: ASCII-8BIT
-      string: '[["2012/12/19",0],["2012/12/20",0],["2012/12/21",0],["2012/12/22",0],["2012/12/23",0],["2012/12/24",0],["2012/12/25",0],["2012/12/26",0],["2012/12/27",0],["2012/12/28",0],["2012/12/29",0],["2012/12/30",0],["2012/12/31",0],["2013/01/01",0],["2013/01/02",0],["2013/01/03",0],["2013/01/04",0],["2013/01/05",0],["2013/01/06",0],["2013/01/07",1],["2013/01/08",3],["2013/01/09",0],["2013/01/10",0],["2013/01/11",0],["2013/01/12",0],["2013/01/13",0],["2013/01/14",0],["2013/01/15",0],["2013/01/16",0],["2013/01/17",0],["2013/01/18",0],["2013/01/19",0],["2013/01/20",0],["2013/01/21",0],["2013/01/22",0],["2013/01/23",0],["2013/01/24",108],["2013/01/25",1],["2013/01/26",0],["2013/01/27",0],["2013/01/28",0],["2013/01/29",2],["2013/01/30",108],["2013/01/31",2],["2013/02/01",108],["2013/02/02",0],["2013/02/03",0],["2013/02/04",0],["2013/02/05",108],["2013/02/06",5],["2013/02/07",18],["2013/02/08",7],["2013/02/09",108],["2013/02/10",5],["2013/02/11",0],["2013/02/12",0],["2013/02/13",16],["2013/02/14",4],["2013/02/15",9],["2013/02/16",1],["2013/02/17",0],["2013/02/18",1],["2013/02/19",3],["2013/02/20",12],["2013/02/21",26],["2013/02/22",8],["2013/02/23",1],["2013/02/24",3],["2013/02/25",15],["2013/02/26",0],["2013/02/27",20],["2013/02/28",7],["2013/03/01",15],["2013/03/02",0],["2013/03/03",8],["2013/03/04",7],["2013/03/05",22],["2013/03/06",3],["2013/03/07",40],["2013/03/08",14],["2013/03/09",4],["2013/03/10",0],["2013/03/11",0],["2013/03/12",3],["2013/03/13",108],["2013/03/14",108],["2013/03/15",108],["2013/03/16",0],["2013/03/17",2],["2013/03/18",7],["2013/03/19",108],["2013/03/20",8],["2013/03/21",33],["2013/03/22",2],["2013/03/23",108],["2013/03/24",10],["2013/03/25",10],["2013/03/26",108],["2013/03/27",5],["2013/03/28",22],["2013/03/29",0],["2013/03/30",108],["2013/03/31",0],["2013/04/01",0],["2013/04/02",108],["2013/04/03",12],["2013/04/04",5],["2013/04/05",6],["2013/04/06",108],["2013/04/07",0],["2013/04/08",11],["2013/04/09",1],["2013/04/10",1],["2013/04/11",3],["2013/04/12",12],["2013/04/13",0],["2013/04/14",0],["2013/04/15",0],["2013/04/16",0],["2013/04/17",0],["2013/04/18",0],["2013/04/19",0],["2013/04/20",0],["2013/04/21",0],["2013/04/22",1],["2013/04/23",7],["2013/04/24",13],["2013/04/25",4],["2013/04/26",13],["2013/04/27",0],["2013/04/28",0],["2013/04/29",4],["2013/04/30",12],["2013/05/01",108],["2013/05/02",108],["2013/05/03",108],["2013/05/04",0],["2013/05/05",0],["2013/05/06",0],["2013/05/07",108],["2013/05/08",3],["2013/05/09",0],["2013/05/10",5],["2013/05/11",108],["2013/05/12",2],["2013/05/13",4],["2013/05/14",108],["2013/05/15",14],["2013/05/16",0],["2013/05/17",10],["2013/05/18",108],["2013/05/19",0],["2013/05/20",3],["2013/05/21",108],["2013/05/22",6],["2013/05/23",2],["2013/05/24",2],["2013/05/25",108],["2013/05/26",0],["2013/05/27",0],["2013/05/28",3],["2013/05/29",108],["2013/05/30",108],["2013/05/31",108],["2013/06/01",0],["2013/06/02",0],["2013/06/03",0],["2013/06/04",2],["2013/06/05",5],["2013/06/06",0],["2013/06/07",1],["2013/06/08",0],["2013/06/09",0],["2013/06/10",9],["2013/06/11",22],["2013/06/12",8],["2013/06/13",0],["2013/06/14",22],["2013/06/15",0],["2013/06/16",0],["2013/06/17",0],["2013/06/18",1],["2013/06/19",14],["2013/06/20",0],["2013/06/21",16],["2013/06/22",0],["2013/06/23",0],["2013/06/24",0],["2013/06/25",1],["2013/06/26",0],["2013/06/27",108],["2013/06/28",108],["2013/06/29",0],["2013/06/30",0],["2013/07/01",0],["2013/07/02",0],["2013/07/03",108],["2013/07/04",2],["2013/07/05",0],["2013/07/06",108],["2013/07/07",0],["2013/07/08",4],["2013/07/09",0],["2013/07/10",108],["2013/07/11",7],["2013/07/12",2],["2013/07/13",108],["2013/07/14",0],["2013/07/15",6],["2013/07/16",1],["2013/07/17",108],["2013/07/18",0],["2013/07/19",0],["2013/07/20",108],["2013/07/21",0],["2013/07/22",108],["2013/07/23",108],["2013/07/24",108],["2013/07/25",108],["2013/07/26",108],["2013/07/27",108],["2013/07/28",0],["2013/07/29",0],["2013/07/30",1],["2013/07/31",1],["2013/08/01",2],["2013/08/02",3],["2013/08/03",0],["2013/08/04",0],["2013/08/05",4],["2013/08/06",0],["2013/08/07",0],["2013/08/08",4],["2013/08/09",3],["2013/08/10",0],["2013/08/11",0],["2013/08/12",1],["2013/08/13",8],["2013/08/14",1],["2013/08/15",3],["2013/08/16",1],["2013/08/17",0],["2013/08/18",3],["2013/08/19",0],["2013/08/20",0],["2013/08/21",108],["2013/08/22",108],["2013/08/23",108],["2013/08/24",0],["2013/08/25",0],["2013/08/26",0],["2013/08/27",108],["2013/08/28",0],["2013/08/29",108],["2013/08/30",0],["2013/08/31",108],["2013/09/01",0],["2013/09/02",1],["2013/09/03",108],["2013/09/04",8],["2013/09/05",108],["2013/09/06",4],["2013/09/07",108],["2013/09/08",9],["2013/09/09",8],["2013/09/10",108],["2013/09/11",19],["2013/09/12",108],["2013/09/13",0],["2013/09/14",108],["2013/09/15",0],["2013/09/16",0],["2013/09/17",0],["2013/09/18",108],["2013/09/19",0],["2013/09/20",0],["2013/09/21",108],["2013/09/22",0],["2013/09/23",0],["2013/09/24",0],["2013/09/25",0],["2013/09/26",0],["2013/09/27",0],["2013/09/28",0],["2013/09/29",0],["2013/09/30",0],["2013/10/01",4],["2013/10/02",5],["2013/10/03",3],["2013/10/04",5],["2013/10/05",0],["2013/10/06",0],["2013/10/07",11],["2013/10/08",7],["2013/10/09",5],["2013/10/10",9],["2013/10/11",9],["2013/10/12",0],["2013/10/13",0],["2013/10/14",1],["2013/10/15",3],["2013/10/16",5],["2013/10/17",0],["2013/10/18",3],["2013/10/19",0],["2013/10/20",0],["2013/10/21",10],["2013/10/22",6],["2013/10/23",6],["2013/10/24",10],["2013/10/25",3],["2013/10/26",11],["2013/10/27",1],["2013/10/28",2],["2013/10/29",108],["2013/10/30",1],["2013/10/31",4],["2013/11/01",6],["2013/11/02",108],["2013/11/03",0],["2013/11/04",3],["2013/11/05",10],["2013/11/06",108],["2013/11/07",1],["2013/11/08",108],["2013/11/09",0],["2013/11/10",69],["2013/11/11",4],["2013/11/12",9],["2013/11/13",67],["2013/11/14",108],["2013/11/15",41],["2013/11/16",15],["2013/11/17",8],["2013/11/18",29],["2013/11/19",3],["2013/11/20",38],["2013/11/21",20],["2013/11/22",23],["2013/11/23",2],["2013/11/24",0],["2013/11/25",20],["2013/11/26",13],["2013/11/27",12],["2013/11/28",14],["2013/11/29",3],["2013/11/30",79],["2013/12/01",12],["2013/12/02",32],["2013/12/03",17],["2013/12/04",30],["2013/12/05",12],["2013/12/06",13],["2013/12/07",11],["2013/12/08",10],["2013/12/09",14],["2013/12/10",13],["2013/12/11",11],["2013/12/12",22],["2013/12/13",17],["2013/12/14",19],["2013/12/15",4],["2013/12/16",18],["2013/12/17",40],["2013/12/18",18],["2013/12/19",7]]'
+      string: '[["2013-08-30",0],["2013-08-31",0],["2013-09-01",0],["2013-09-02",1],["2013-09-03",0],["2013-09-04",8],["2013-09-05",10],["2013-09-06",4],["2013-09-07",22],["2013-09-08",9],["2013-09-09",8],["2013-09-10",7],["2013-09-11",19],["2013-09-12",6],["2013-09-13",0],["2013-09-14",0],["2013-09-15",0],["2013-09-16",0],["2013-09-17",0],["2013-09-18",0],["2013-09-19",0],["2013-09-20",0],["2013-09-21",0],["2013-09-22",0],["2013-09-23",0],["2013-09-24",0],["2013-09-25",0],["2013-09-26",0],["2013-09-27",0],["2013-09-28",0],["2013-09-29",0],["2013-09-30",0],["2013-10-01",4],["2013-10-02",7],["2013-10-03",3],["2013-10-04",5],["2013-10-05",0],["2013-10-06",0],["2013-10-07",15],["2013-10-08",9],["2013-10-09",5],["2013-10-10",9],["2013-10-11",9],["2013-10-12",0],["2013-10-13",0],["2013-10-14",1],["2013-10-15",3],["2013-10-16",5],["2013-10-17",0],["2013-10-18",3],["2013-10-19",0],["2013-10-20",0],["2013-10-21",10],["2013-10-22",6],["2013-10-23",6],["2013-10-24",10],["2013-10-25",3],["2013-10-26",11],["2013-10-27",1],["2013-10-28",2],["2013-10-29",0],["2013-10-30",1],["2013-10-31",4],["2013-11-01",6],["2013-11-02",0],["2013-11-03",0],["2013-11-04",3],["2013-11-05",10],["2013-11-06",5],["2013-11-07",1],["2013-11-08",12],["2013-11-09",0],["2013-11-10",69],["2013-11-11",4],["2013-11-12",9],["2013-11-13",67],["2013-11-14",34],["2013-11-15",41],["2013-11-16",15],["2013-11-17",8],["2013-11-18",29],["2013-11-19",3],["2013-11-20",38],["2013-11-21",20],["2013-11-22",23],["2013-11-23",2],["2013-11-24",0],["2013-11-25",20],["2013-11-26",13],["2013-11-27",12],["2013-11-28",14],["2013-11-29",3],["2013-11-30",79],["2013-12-01",12],["2013-12-02",32],["2013-12-03",19],["2013-12-04",30],["2013-12-05",12],["2013-12-06",19],["2013-12-07",11],["2013-12-08",10],["2013-12-09",16],["2013-12-10",13],["2013-12-11",14],["2013-12-12",22],["2013-12-13",26],["2013-12-14",19],["2013-12-15",4],["2013-12-16",18],["2013-12-17",15],["2013-12-18",18],["2013-12-19",12],["2013-12-20",15],["2013-12-21",2],["2013-12-22",0],["2013-12-23",1],["2013-12-24",0],["2013-12-25",0],["2013-12-26",0],["2013-12-27",0],["2013-12-28",0],["2013-12-29",7],["2013-12-30",0],["2013-12-31",0],["2014-01-01",0],["2014-01-02",0],["2014-01-03",23],["2014-01-04",0],["2014-01-05",3],["2014-01-06",2],["2014-01-07",7],["2014-01-08",2],["2014-01-09",4],["2014-01-10",14],["2014-01-11",0],["2014-01-12",0],["2014-01-13",5],["2014-01-14",15],["2014-01-15",0],["2014-01-16",0],["2014-01-17",8],["2014-01-18",14],["2014-01-19",28],["2014-01-20",36],["2014-01-21",26],["2014-01-22",52],["2014-01-23",35],["2014-01-24",10],["2014-01-25",0],["2014-01-26",94],["2014-01-27",40],["2014-01-28",35],["2014-01-29",57],["2014-01-30",22],["2014-01-31",57],["2014-02-01",1],["2014-02-02",20],["2014-02-03",6],["2014-02-04",25],["2014-02-05",27],["2014-02-06",3],["2014-02-07",14],["2014-02-08",39],["2014-02-09",29],["2014-02-10",29],["2014-02-11",22],["2014-02-12",12],["2014-02-13",33],["2014-02-14",3],["2014-02-15",78],["2014-02-16",35],["2014-02-17",43],["2014-02-18",23],["2014-02-19",1],["2014-02-20",9],["2014-02-21",35],["2014-02-22",0],["2014-02-23",12],["2014-02-24",0],["2014-02-25",0],["2014-02-26",0],["2014-02-27",0],["2014-02-28",7],["2014-03-01",0],["2014-03-02",0],["2014-03-03",1],["2014-03-04",2],["2014-03-05",6],["2014-03-06",0],["2014-03-07",0],["2014-03-08",0],["2014-03-09",0],["2014-03-10",0],["2014-03-11",0],["2014-03-12",0],["2014-03-13",2],["2014-03-14",7],["2014-03-15",0],["2014-03-16",0],["2014-03-17",2],["2014-03-18",19],["2014-03-19",24],["2014-03-20",11],["2014-03-21",15],["2014-03-22",0],["2014-03-23",0],["2014-03-24",1],["2014-03-25",16],["2014-03-26",3],["2014-03-27",0],["2014-03-28",0],["2014-03-29",0],["2014-03-30",1],["2014-03-31",5],["2014-04-01",10],["2014-04-02",2],["2014-04-03",4],["2014-04-04",2],["2014-04-05",0],["2014-04-06",0],["2014-04-07",3],["2014-04-08",8],["2014-04-09",4],["2014-04-10",3],["2014-04-11",2],["2014-04-12",0],["2014-04-13",0],["2014-04-14",6],["2014-04-15",15],["2014-04-16",5],["2014-04-17",2],["2014-04-18",0],["2014-04-19",0],["2014-04-20",0],["2014-04-21",0],["2014-04-22",4],["2014-04-23",0],["2014-04-24",0],["2014-04-25",0],["2014-04-26",0],["2014-04-27",0],["2014-04-28",0],["2014-04-29",0],["2014-04-30",0],["2014-05-01",0],["2014-05-02",0],["2014-05-03",0],["2014-05-04",0],["2014-05-05",0],["2014-05-06",2],["2014-05-07",14],["2014-05-08",1],["2014-05-09",14],["2014-05-10",0],["2014-05-11",0],["2014-05-12",9],["2014-05-13",18],["2014-05-14",14],["2014-05-15",14],["2014-05-16",8],["2014-05-17",0],["2014-05-18",0],["2014-05-19",0],["2014-05-20",4],["2014-05-21",0],["2014-05-22",41],["2014-05-23",11],["2014-05-24",0],["2014-05-25",0],["2014-05-26",0],["2014-05-27",7],["2014-05-28",25],["2014-05-29",19],["2014-05-30",20],["2014-05-31",0],["2014-06-01",0],["2014-06-02",2],["2014-06-03",3],["2014-06-04",8],["2014-06-05",1],["2014-06-06",10],["2014-06-07",0],["2014-06-08",1],["2014-06-09",3],["2014-06-10",7],["2014-06-11",6],["2014-06-12",0],["2014-06-13",0],["2014-06-14",0],["2014-06-15",0],["2014-06-16",3],["2014-06-17",1],["2014-06-18",0],["2014-06-19",1],["2014-06-20",4],["2014-06-21",0],["2014-06-22",1],["2014-06-23",9],["2014-06-24",20],["2014-06-25",7],["2014-06-26",2],["2014-06-27",2],["2014-06-28",0],["2014-06-29",0],["2014-06-30",2],["2014-07-01",1],["2014-07-02",1],["2014-07-03",3],["2014-07-04",2],["2014-07-05",0],["2014-07-06",1],["2014-07-07",0],["2014-07-08",5],["2014-07-09",3],["2014-07-10",7],["2014-07-11",0],["2014-07-12",0],["2014-07-13",0],["2014-07-14",10],["2014-07-15",5],["2014-07-16",2],["2014-07-17",4],["2014-07-18",3],["2014-07-19",0],["2014-07-20",0],["2014-07-21",12],["2014-07-22",14],["2014-07-23",1],["2014-07-24",21],["2014-07-25",0],["2014-07-26",0],["2014-07-27",0],["2014-07-28",0],["2014-07-29",0],["2014-07-30",5],["2014-07-31",23],["2014-08-01",22],["2014-08-02",0],["2014-08-03",1],["2014-08-04",10],["2014-08-05",2],["2014-08-06",1],["2014-08-07",14],["2014-08-08",0],["2014-08-09",0],["2014-08-10",0],["2014-08-11",4],["2014-08-12",7],["2014-08-13",4],["2014-08-14",0],["2014-08-15",0],["2014-08-16",0],["2014-08-17",1],["2014-08-18",3],["2014-08-19",0],["2014-08-20",3],["2014-08-21",2],["2014-08-22",0],["2014-08-23",0],["2014-08-24",0],["2014-08-25",0],["2014-08-26",4],["2014-08-27",9],["2014-08-28",0],["2014-08-29",0],["2014-08-30",0]]'
     http_version: 
   recorded_at: Sat, 07 Dec 2013 00:00:00 GMT
-recorded_with: VCR 2.8.0
+recorded_with: VCR 2.9.2
