--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ deploy:
   provider: heroku
   app: pokrovsky
   api_key:
-    secure: MRw5yhSTSGdUgwCGrYU1BkV1vZWmc91XdpMw7Qes6Vnzt/foQpUiNMTeglEGcPjwDnqCaKfZSn6/ikscuLbvKrPV+10Awn7rwEspMRYzCnCnAEBPQmNVdjxwBBGoVSpyEBdMFjUNIPW3hfXmIi6OsxWFdROzB1J7N0lTmwG8ONQ=
+    secure: "UyYdGrzj+3m/u5F20GCyfPFMJhAVq7v4FXJTYq4VLxGF7/13QpS76Ep9DBLZJb/GlRyfaRzi7IEr0pORItAYXTlg5yWBSOzyAmApT1G52JyevDtC0xeVdO5uAzZEgxfmgAIfFJLNSVVjMb8DwECG+noYoUO8AG0zBYFdpjNFslY="
